--- a/package.json
+++ b/package.json
@@ -13,10 +13,12 @@
     "@types/react": "^17.0.20",
     "@types/react-dom": "^17.0.9",
     "@types/react-router-dom": "^5.3.3",
+    "bootstrap": "^5.3.3",
     "chart.js": "^3.7.1",
     "clsx": "^2.1.1",
     "i18next": "^21.6.14",
     "react": "^17.0.2",
+    "react-bootstrap": "^2.10.6",
     "react-chartjs-2": "^4.0.1",
     "react-dom": "^17.0.2",
     "react-hook-form": "^7.53.2",
