--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@types/react": "^17.0.20",
     "@types/react-dom": "^17.0.9",
     "@types/react-router-dom": "^5.3.3",
+    "axios": "^1.7.9",
     "bootstrap": "^5.3.3",
     "chart.js": "^3.7.1",
     "clsx": "^2.1.1",
